--- a/nimra-ahmed.html
+++ b/nimra-ahmed.html
@@ -120,7 +120,7 @@
 
 
     <div class="row">
-      <div class="col-md-4 col-sm-12 col-lg-4">
+      <div class="col-md-3 col-sm-12 col-lg-4">
         <img src="nimra-ahmeed.jpg" height="450"  width="330" alt="">  <br><br>
 
         <nav class="nav flex-column col-lg-15 col-md-15 col-sm-12 container shadow p-3 mb-5 bg-body-tertiary rounded">
@@ -212,7 +212,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="halem.jpg" height="450" class="card-img-top" alt="...">
+        <img src="halem.jpg"  class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Haalim</h5>
           <p class="card-text">Haalim is an excellent time travel Urdu novel written by Nimra Ahmed
@@ -264,7 +264,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="saans-sakin-thi.jpg" height="450"  class="card-img-top" alt="...">
+        <img src="saans-sakin-thi.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Saans-sakin-thi</h5>
           <p class="card-text">It is a social and romantic story describing our society’s actual picture. It was the first-ever book by Nimra Ahmad, which earned a 
