--- a/umera-ahmeed.html
+++ b/umera-ahmeed.html
@@ -120,7 +120,7 @@
 
 
     <div class="row">
-      <div class="col-md-4 col-sm-12 col-lg-4">
+      <div class="col-md-3 col-sm-12 col-lg-4">
         <img src="Umera-Ahmed.jpg" height="450"  width="330" alt="">  <br><br>
 
         <nav class="nav flex-column col-lg-15 col-md-15 col-sm-12 container shadow p-3 mb-5 bg-body-tertiary rounded">
@@ -208,7 +208,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-       <a href="salar.html"> <img src="Peer-E-Kamil.webp" height="410" class="card-img-top" alt="..."></a>
+       <a href="salar.html"> <img src="Peer-E-Kamil.webp" class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h5 class="card-title">Peer-e-Kamil</h5>
           <p class="card-text">Peer-e-Kamil novel authored by Umaira Ahmed.This is one of the most famous novel of Umaira Ahmed which contains an interesting socail romantic 
@@ -256,7 +256,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="imman-ummeed.png" height="450" class="card-img-top" alt="...">
+        <img src="imman-ummeed.png"  class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Eman-muhabat</h5>
           <p class="card-text">Imaan, Umeed or Mohabbat is a spiritual fiction novel written by Umera Ahmed.it is amongst the writer's favorite works of hers.The story is just a hundred and fifity pages
@@ -270,7 +270,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="La-Hasil.jpg" height="450"  class="card-img-top" alt="...">
+        <img src="La-Hasil.jpg"  class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">La-Hasil</h5>
           <p class="card-text">It's a story of redemption of someone and regrets of someone else. It's a story of bringing out yourself 
